conexion con la bd

--- a/proyecto-fin-grado/src/main/resources/application.properties
+++ b/proyecto-fin-grado/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#configuracion para conectar con mysql workbench
+#la base de datos se crea sola a través de la pagina web
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11687094
+spring.datasource.username=sql11687094
+spring.datasource.password=cQx3N89TKP
 
+#Propiedades de Hibernate
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+#le dice a hibernate que cree tablas si no estan creadas
+spring.jpa.hibernate.ddl-auto=update
