--- a/proyecto-fin-grado/src/main/resources/application.properties
+++ b/proyecto-fin-grado/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #configuracion para conectar con mysql workbench
 #la base de datos se crea sola a través de la pagina web
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11687094
-spring.datasource.username=sql11687094
-spring.datasource.password=cQx3N89TKP
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11687323
+spring.datasource.username=sql11687323
+spring.datasource.password=8CTkQhhQ1G
 
 #Propiedades de Hibernate
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
