--- a/proyecto-fin-grado/src/main/resources/application.properties
+++ b/proyecto-fin-grado/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=zB2EgN9Uss
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 #le dice a hibernate que cree tablas si no estan creadas
 spring.jpa.hibernate.ddl-auto=update
+
+#seguridad
+spring.security.user.name=andi
+spring.security.user.password=andi
