ERROR: fin curso pero no inicia sesion

--- a/proyecto-fin-grado/src/main/resources/application.properties
+++ b/proyecto-fin-grado/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 #seguridad
 spring.security.user.name=andi
 spring.security.user.password=andi
+#para ponerme como admin para no estar capada:
+spring.security.user.roles=ROLE_ADMIN
