--- a/proyecto-fin-grado/src/main/resources/application.properties
+++ b/proyecto-fin-grado/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+
+
 #configuracion para conectar con mysql workbench
 #la base de datos se crea sola a través de la pagina web
+#PARA EL MVN CLEAN INSTALL BORRAR TOODO MENOS ESTAS TRES LINEAS PARA QUE NO DE ERROR:
 spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11687385
 spring.datasource.username=sql11687385
 spring.datasource.password=zB2EgN9Uss
